# Actix-WebApi-BlogApp

./: .env.example  Cargo.toml  Makefile  diesel.toml
src/: actors.rs  db_models.rs  db_utils.rs  insertable.rs  main.rs  messages.rs  schema.rs  services.rs
